# zephyr_userproj

./: .gitignore  LICENSE  README.md
.ansible/: install_zephyr.yml
basics/debugging/: CMakeLists.txt  prj.conf
basics/fade_pwm/: CMakeLists.txt
basics/gpio/: sample.yaml
basics/interrupts/: CMakeLists.txt  prj.conf
basics/scheduling/: CMakeLists.txt
basics/unit_test/: CMakeLists.txt  README.md  prj.conf  test.conf  testcase.yaml
basics/unit_test/src/: main.cpp
basics/unit_test/test/: test_main.cpp
cpp_template/: CMakeLists.txt  prj.conf
cpp_template/src/: main.cpp
ds18b20/: prj.conf  readme.md
gpio/: CMakeLists.txt  prj.conf
gpio/src/: main.c
hardware_drivers/BME680/: README.rst  prj.conf
hardware_drivers/BMI270/: CMakeLists.txt
hardware_drivers/MAX31865/: CMakeLists.txt  README.md  prj.conf
hardware_drivers/ds18b20/: prj.conf
hardware_drivers/stepper_driver/: CMakeLists.txt  README.md  prj.conf
hardware_drivers/stepper_driver/boards/: esp32s2_saola.overlay
hardware_drivers/stepper_driver/include/: controller.h  stepper.h
hardware_drivers/stepper_driver/src/: controller.cpp  main.c  main.cpp  stepper.cpp  stepper.h
hardware_drivers/stepper_driver/test/: test_main.cpp
hello_world/src/: main.c
interrupts/src/: main.c
networking/wifi_test/: CMakeLists.txt  README.md  prj.conf
projects/ESPresso/: CMakeLists.txt  README.md  prj.conf
projects/ambient_sensor/: CMakeLists.txt  Kconfig  credentials_sample.conf  prj.conf
scheduling/: README.rst  prj.conf
template/: prj.conf
timers/: CMakeLists.txt  prj.conf
(+31 files in other folders)
